Fixed ex02 compilation

--- a/ex02/Makefile
+++ b/ex02/Makefile
@@ -14,7 +14,7 @@ NAME	:=	fixed
 
 override SOURCE_DIR		:=	src/
 override INCLUDE_DIR	:=	include/
-INCLUDES				:=	fixed_utils Fixed
+INCLUDES				:=	Fixed
 SOURCES					:=	Fixed main
 override SOURCE			:=	$(addprefix $(SOURCE_DIR), $(addsuffix .cpp, $(SOURCES)))
 override INCLUDE		:=	$(addprefix $(INCLUDE_DIR), $(addsuffix .hpp, $(INCLUDES)))
