--- a/ex03/Makefile
+++ b/ex03/Makefile
@@ -14,7 +14,7 @@ NAME	:=	fixed
 
 override SOURCE_DIR		:=	src/
 override INCLUDE_DIR	:=	include/
-INCLUDES				:=	fixed_utils Fixed Point
+INCLUDES				:=	Fixed Point
 SOURCES					:=	bsp Fixed main Point
 override SOURCE			:=	$(addprefix $(SOURCE_DIR), $(addsuffix .cpp, $(SOURCES)))
 override INCLUDE		:=	$(addprefix $(INCLUDE_DIR), $(addsuffix .hpp, $(INCLUDES)))
